# amn-irc

./: CMakeLists.txt  README.md
amn-irc-client/: CMakeLists.txt  slash_cmds.gperf
amn-irc-client/src/: main.c  msg_sender_task.c  msg_sender_task.h  slash_cmd.c  slash_cmd.h  slash_cmd_map.c  slash_cmd_map.h  slash_cmd_parser.c  slash_cmd_parser.h  tui.c  tui.h  tui_input.c  tui_input.h  user_input_queue.c  user_input_queue.h  user_output_queue.c  user_output_queue.h
amn-irc-lib/: CMakeLists.txt  commands.gperf
amn-irc-lib/include/: application.h  array_list.h  irc_cmd.h  irc_cmd_parser.h  irc_cmd_type.h  irc_cmd_unparser.h  irc_msg.h  irc_msg_parser.h  irc_msg_reader.h  irc_msg_unparser.h  irc_msg_validator.h  irc_msg_writer.h  irc_reply.h  irc_reply_type.h  log.h  queue.h  str_utils.h  task.h  task_queue.h  task_runner.h
amn-irc-lib/src/: application.c  array_list.c  irc_cmd.c  irc_cmd_map.c  irc_cmd_map.h  irc_cmd_parser.c  irc_cmd_type.c  irc_cmd_unparser.c  irc_msg.c  irc_msg_parser.c  irc_msg_reader.c  irc_msg_unparser.c  irc_msg_validator.c  irc_msg_writer.c  log.c  queue.c  str_utils.c  task.c  task_queue.c  task_runner.c
amn-irc-server/: CMakeLists.txt
amn-irc-server/src/: accept_conn_task.c  accept_conn_task.h  irc_cmd_executor_task.c  irc_cmd_executor_task.h  irc_cmd_queue.c  irc_cmd_queue.h  irc_reply.c  irc_reply.h  main.c  receive_msg_task.c  receive_msg_task.h  send_msg_task.c  send_msg_task.h  server_context.c  server_context.h  task.h  task_queue.c  task_queue.h  user_repo.h
